# Axium-Interview

./: INSTRUCTIONS.md  PLAN.md  README.md
backend/: agents.py  cli.py  db.py  errors.py  main.py  models.py  prompts.py  pyproject.toml
backend/tests/: conftest.py  test_api.py  test_models_unit.py  test_openrouter_integration.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/recipes/: page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  Navbar.tsx  RecipeCard.tsx  RecipeSkeleton.tsx  SaveRecipeModal.tsx
frontend/lib/: api.ts
frontend/types/: recipe.ts
